<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/fragment_chat">

    <fragment
        android:id="@+id/fragment_chat"
        android:name="com.looper.vic.fragment.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/fragment_chats"
        android:name="com.looper.vic.fragment.ChatsFragment"
        android:label="@string/title_chats"
        tools:layout="@layout/fragment_chats" />

    <fragment
        android:id="@+id/fragment_settings"
        android:name="com.looper.vic.fragment.SettingsFragment"
        android:label="@string/title_settings" />

    <fragment
        android:id="@+id/fragment_tools"
        android:name="com.looper.vic.fragment.ToolsFragment"
        android:label="@string/title_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/fragment_about"
        android:name="com.looper.vic.fragment.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/fragment_voice_assistant"
        android:name="com.looper.vic.fragment.VoiceAssistantFragment"
        android:label="@string/title_voice_assistant"
        tools:layout="@layout/fragment_voice_assistant" />

    <fragment
        android:id="@+id/fragment_select_text"
        android:name="com.looper.vic.fragment.SelectTextFragment"
        android:label="@string/select_text"
        tools:layout="@layout/fragment_select_text">
        <argument
            android:name="responseText"
            app:argType="string" />
    </fragment>

</navigation>